# apexai

./: .gitignore  README.md  RELEASING.md
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 14b0e7cbd5ab_subscriptions.py  851b404636bf_coach_reports.py  efa916c8d9b5_initial_schema.py
backend/app/: cli.py  main.py
backend/app/api/v1/: __init__.py  account.py  auth.py  billing.py  coach.py  health.py  laps.py  sessions.py  tracks.py
backend/app/billing/: provider.py
backend/app/coach/: payload.py  providers.py
backend/app/core/: config.py  database.py  deps.py  errors.py  security.py
backend/app/data/: track_corners.json  tracks.json
backend/app/models/: __init__.py  base.py  coach_report.py  lap.py  race_session.py  subscription.py  telemetry_trace.py  user.py
backend/app/repositories/: coach_repo.py  lap_repo.py  session_repo.py  subscription_repo.py  user_repo.py
backend/app/schemas/: account.py  auth.py  billing.py  coach.py  lap.py  track.py
backend/app/services/: account_service.py  auth_service.py  billing_service.py  coach_service.py  lap_service.py  track_catalog.py
backend/app/storage/: object_store.py
backend/app/telemetry/: compare.py  metrics.py  synth.py  trace.py
backend/scripts/: start.sh
backend/tests/: conftest.py  test_auth.py  test_billing.py  test_coach.py  test_coach_trajectory.py  test_compare.py  test_corner_detection.py  test_ingestion.py  test_metrics.py  test_trace.py  test_tracks.py
(+113 files in other folders)
