# Tooling config only. Dependencies live in requirements*.txt (installed via pip in Docker).
[project]
name = "apexai-backend"
version = "0.1.0"
description = "ApexAI — AI sim-racing coach backend (F1 telemetry ingestion, metrics, coach)"
requires-python = ">=3.12"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]  # FastAPI uses function calls (Depends(...)) in argument defaults by design
